[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "ezpz-guiz"
repository = { workspace = true }
version = "0.0.1"

[dependencies]
chrono = { workspace = true }
connectorx = { workspace = true }
ezpz-stubz = { workspace = true }
hashbrown = { workspace = true }
polars = { workspace = true }
pyo3 = { workspace = true }
pyo3-polars = { workspace = true }
pyo3-stub-gen = { workspace = true }
pyproject-toml = { workspace = true }
serde = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
name = "ezpz_guiz"

[features]
default = ["pyo3/extension-module"]

[[bin]]
doc = false
name = "stub_gen"
