[package]
authors = ["Stephen Oketch"]
description = "Rust technical indicators for polars (Wraps rust_ti crate)"
edition = { workspace = true }
name = "ezpz-rust-ti"
repository = { workspace = true }
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "ezpz_rust_ti"

[dependencies]
ezpz-stubz = { workspace = true }
polars = { workspace = true }
pyo3 = { workspace = true }
pyo3-polars = { workspace = true }
pyo3-stub-gen = { workspace = true }
rust_ti = "1.4.2"


[features]
default = ["pyo3/extension-module"]

[[bin]]
doc = false
name = "stub_gen"
