[project]
authors = [{ "name" = "Stephen Oketch" }]
dependencies = ["ezpz-pluginz", "polars==1.30.0", "pyarrow==20.0.0"]
description = "Technical Indicators for Polars using RustTI"
name = "ezpz_rust_ti"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "0.0.1"

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
module-name = "ezpz_rust_ti._ezpz_rust_ti"
python-packages = ["ezpz_macroz"]
python-source = "python"
