[project]
authors = [{ "name" = "Jeremy Meek" }]
dependencies = []
description = ""
name = "ezpz_formatterz"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "0.0.1"


[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
module-name = "ezpz_formatterz._ezpz_formatterz"
python-packages = ["ezpz_macroz"]
python-source = "python"
