[project]
authors = [{ "name" = "Jeremy Meek" }]
dependencies = ["libcst==1.8.0", "pydantic==2.11.7"]
description = "A tool that brings type safety and type checking enhancements to the Polars library."
name = "macroz"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "0.0.1"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
exclude = ["macroz/**/test_*.py"]
include = ["macroz/**/*.j2", "macroz/**/*.py"]

[tool.rye]
dev-dependencies = ["pip-audit>=2.9.0"]
