[project]
authors = [{ "name" = "Jeremy Meek" }]
dependencies = ["libcst==1.8.6", "pydantic==2.12.5"]
description = "A tool that brings type safety and type checking enhancements to the Polars library."
name = "macroz"
readme = "README.md"
requires-python = ">=3.14,<3.15"
version = "0.0.1"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
exclude = ["macroz/**/test_*.py"]
include = ["macroz/**/*.j2", "macroz/**/*.py"]

[dependency-groups]
dev = ["pip-audit>=2.9.0"]
