[project]
authors = [{ "name" = "Jeremy Meek" }]
dependencies = [
  "aiofiles==25.1.0",
  "cached-property==2.0.1",
  "jinja2==3.1.6",
  "libcst==1.8.0",
  "macroz",
  "pydantic==2.12.2",
  "pydantic[email]>=2.12.2",
  "pywatchman==3.0.0",
  "structlog>=25.4.0",
  "toml==0.10.2",
  "typer==0.19.2",
]
description = "A tool that brings type safety and type checking enhancements to the Polars library."
name = "ezpz_pluginz"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "0.0.1"

[tool.uv.sources]
macroz = { workspace = true }

[project.scripts]
ezpz = "ezpz_pluginz.__cli__:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = ["macroz", "pip-audit>=2.9.0"]
