[project]
authors = [{ "name" = "Stephen Oketch" }]
dependencies = [
  "alembic-postgresql-enum",
  "alembic>=1.12.1",
  "alembic_utils==0.8.8",
  "asyncpg>=0.29.0",
  "fastapi>=0.104.0",
  "greenlet==3.2.3",
  "httpx>=0.25.0",
  "psycopg2==2.9.10",
  "pydantic-settings==2.10.1",
  "pydantic>=2.5.0",
  "python-dotenv>=1.0.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.6",
  "sqlmodel==0.0.24",
  "structlog>=25.4.0",
  "uvicorn[standard]>=0.24.0",
]
description = "Central registry for EZPZ ecosystem plugins"
name = "ezpz_registry"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "0.0.1"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.hatch.metadata]
allow-direct-references = true
