[project]
authors = [{ "name" = "Stephen Oketch" }]
dependencies = ["ezpz_pluginz", "numpy>=2.3.4", "polars==1.32.0", "pyarrow==22.0.0"]
description = "Examples showcasing use of the ezpz-rust-tiz plugin"
name = "ezpz_tiz"
readme = "README.md"
requires-python = ">=3.14,<3.15"
version = "0.0.1"

[tool.uv.sources]
ezpz_pluginz = { workspace = true }

[dependency-groups]
dev = ["pip-audit>=2.9.0"]
