[project]
authors = [{ "name" = "Jeremy Meek" }]
dependencies = ["painlezz-macroz", "polars==1.7.1", "pyarrow==17.0.0"]
description = ""
name = "ezpz_guiz"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.0.1"


[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
module-name = "ezpz_guiz._ezpz_guiz"
# python-packages = ["ezpz_macroz"]
python-source = "python"
