[project]
authors = [{ "name" = "Jeremy Meek" }]
dependencies = ["pydantic==2.9.2"]
description = "A tool that brings type safety and type checking enhancements to the Polars library."
name = "painlezz-basez"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.0.1"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
