[project]
authors = [{ "name" = "Jeremy Meek" }]
dependencies = ["pydantic==2.11.5"]
description = "A tool that brings type safety and type checking enhancements to the Polars library."
name = "painlezz-basez"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "0.0.1"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
