[project]
authors = [{ "name" = "Jeremy Meek" }]
dependencies = ["aiofiles==24.1.0", "libcst==1.4.0", "networkx==3.3", "toml==0.10.2", "typer==0.12.5"]
description = "A tool that brings type safety and type checking enhancements to the Polars library."
name = "painlezz-macroz"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.0.1"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
exclude = ["painlezz_macroz/**/test_*.py"]
include = ["painlezz_macroz/**/*.j2", "painlezz_macroz/**/*.py"]
