[project]
authors = [{ "name" = "Jeremy Meek" }]
dependencies = ["aiofiles==24.1.0", "libcst==1.8.0", "toml==0.10.2", "typer==0.16.0"]
description = "A tool that brings type safety and type checking enhancements to the Polars library."
name = "painlezz-macroz"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "0.0.1"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
exclude = ["painlezz_macroz/**/test_*.py"]
include = ["painlezz_macroz/**/*.j2", "painlezz_macroz/**/*.py"]
