[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = []
dependencies = [
  "aiocsv==1.3.2",
  "aiofiles==24.1.0",
  "aiolimiter==1.1.0",
  "httpx==0.27.2",
  "janus==1.0.0",
  "painlezz-async",
  "selectolax==0.3.21",
  "structlog==24.4.0",
  "tenacity==9.0.0",
  "tqdm==4.66.5",
]
description = ''
name = "painlezz_spiderz"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.0.1"
