[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = []
dependencies = [
    "greenlet>=3.1.1",
    "sqlmodel==0.0.22",
    "structlog==24.4.0",
    "alembic-postgresql-enum>=1.3.0",
]
description = ''
name = "painlezz_sqlmodelz"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.0.1"
