[project]
authors = [{ "name" = "Stephen Oketch" }]
dependencies = ["ezpz_pluginz", "polars==1.34.0", "pyarrow==22.0.0"]
description = "Technical Indicators for Polars using RustTI"
name = "ezpz-rust-ti"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "0.0.1"

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
module-name = "ezpz_rust_ti._ezpz_rust_ti"
python-packages = ["ezpz_rust_ti._ezpz_rust_ti"]
python-source = "python"

[project.entry-points."ezpz.plugins"]
ezpz-rust-ti = "ezpz_rust_ti:register_plugin"

[tool.uv.sources]
ezpz_pluginz = { workspace = true }

[dependency-groups]
dev = ["pip-audit>=2.9.0"]
